test/message/esm_display_syntax_error_import.out
(node:*) ExperimentalWarning: The ESM module loader is experimental.
(Use `node --trace-warnings ...` to show where the warning was created)
file:///*/test/message/esm_display_syntax_error_import.mjs:5
  notfound
  ^^^^^^^^
SyntaxError: The requested module '../fixtures/es-module-loaders/module-named-exports.mjs' does not provide an export named 'notfound'
    at ModuleJob._instantiate (internal/modules/esm/module_job.js:*:*)
    at async ModuleJob.run (internal/modules/esm/module_job.js:*:*)
    at async Loader.import (internal/modules/esm/loader.js:*:*)
