test/message/esm_display_syntax_error_import.mjs
/* eslint-disable no-unused-vars */
import '../common/index.mjs';
import {
  foo,
  notfound
} from '../fixtures/es-module-loaders/module-named-exports.mjs';
